--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "express-session": "^1.15.6",
     "helmet": "^3.8.2",
     "http-errors": "~1.6.2",
+    "jquery": "3.4.1",
     "morgan": "~1.9.0",
-    "uuid": "^3.3.2",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.9",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "pug": "2.0.0-beta11",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/preset-env": "7.1.6",
+    "babel-loader": "8.0.4",
     "jest": "25.1.0",
     "passport-stub": "^1.1.1",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "webpack": "4.26.1",
+    "webpack-cli": "3.1.2"
   }
 }
